---
source: tests/markdown_tests.rs
description: supports_headings_inside_tabgroups
info: "content before\n\n# [_Tab1_](#/tab/id1/condition1)\n\n## Heading inside tab 1\n\nsome content\n\n# [Tab2](#/tab/id2)\nBar\n\n## Heading inside tab 2\n\n---\n\ncontent after"
---
ParsedMarkdown {
    html: "<p>content before</p>\n<div class=\"tabgroup\"><ul class=\"tab-list\" role=\"tablist\"><li class= role=\"presentation\"><label class=\"active\" id=\"id1\" title=\"Tab1\" role=\"tab\">Tab1</a></li><li class= role=\"presentation\"><label class=\"\" id=\"id2\" title=\"Tab2\" role=\"tab\">Tab2</a></li></ul><div class=\"tab-panel active\" data-tab-id=\"id1\"><h2 id=\"heading-inside-tab-1\">Heading inside tab 1</h2>\n<p>some content</p>\n</div><div class=\"tab-panel \" data-tab-id=\"id2\">\n<p>Bar</p>\n<h2 id=\"heading-inside-tab-2\">Heading inside tab 2</h2>\n</div></div>\n<p>content after</p>\n",
    headings: [
        Heading {
            title: "Heading inside tab 1",
            anchor: "heading-inside-tab-1",
            level: 2,
        },
        Heading {
            title: "Heading inside tab 2",
            anchor: "heading-inside-tab-2",
            level: 2,
        },
    ],
    links: [],
}
